# tiago_iaslab_simulation_assignment2

./: CMakeLists.txt  Dockerfile  README.md  package.xml
action/: head.action  moveScan.action  place.action
cfg/: task_configuration.yaml
include/tiago_iaslab_simulation/: arm_client.h  arm_server.h  constant.h  corridor_server.h  find_color_client.h  find_color_server.h  head_client.h  head_server.h  map2d.h  move_client.h  move_server.h  object.h  param_utils.h  pick_place.h  planning_helper.h  point.h  robot.h  scanner_server.h  utils.h
launch/: move_scan.launch  pick_place.launch
msg/: circle.msg
src/: Human_node.cpp  arm_client.cpp  arm_server.cpp  corridor_server.cpp  find_color_client.cpp  find_color_server.cpp  head_client.cpp  head_server.cpp  map.cpp  move_client.cpp  move_server.cpp  object.cpp  planning_helper.cpp  point.cpp  robot.cpp  scanner_server.cpp  utils.cpp
src/nodes/: arm_node.cpp  client_node.cpp  corridor_node.cpp  find_color_node.cpp  head_node.cpp  move_node.cpp  robot_node.cpp  scanner_node.cpp
srv/: Colors.srv  apriltagDetections.srv  scanObstacles.srv
